--- a/src/style.css
+++ b/src/style.css
@@ -1,3 +1,66 @@
-h1 {
-  color: aqua;
+:root {
+  --blanco: #ffffff;
+  --obscuros: #212121;
+  --primario: #ffc107;
+  --secundario: #0097a7;
+  --gris: #757575;
+}
+html {
+  font-size: 62.5%;
+}
+body {
+  font-size: 22px;
+  font-family: "Krub", sans-serif;
+}
+.titulo {
+  color: var(--obscuros);
+  font-size: 22px;
+  text-align: center;
+}
+
+.contenedor {
+  max-width: 120rem;
+  margin: 0 auto;
+}
+.nav-bg {
+  background: var(--secundario);
+}
+.navegador-principal {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+@media (min-width: 768px) {
+  .navegador-principal {
+    flex-direction: row;
+    justify-content: space-between;
+  }
+}
+.navegador-principal a {
+  display: block;
+  text-align: center;
+  color: var(--blanco);
+  text-decoration: none;
+  font-weight: bold;
+  padding: 1.5rem;
+}
+
+.navegador-principal a:hover {
+  color: var(--obscuros);
+  background: var(--primario);
+  transition: ease-in-out;
+}
+
+.primera-seccion {
+  background-image: url("../img/hero.jpg");
+  margin: 0 auto;
+  text-align: center;
+}
+h2 {
+  margin: 0 auto;
+  text-align: center;
+  padding: 5rem;
+}
+svg {
+  display: inline;
 }
