--- a/src/style.css
+++ b/src/style.css
@@ -4,6 +4,7 @@
   --primario: #ffc107;
   --secundario: #0097a7;
   --gris: #757575;
+  --grisClaro: #dfe9f3;
 }
 /* Globales */
 html {
@@ -18,6 +19,11 @@ html {
 body {
   font-size: 2rem; /* 1rem = 10px*/
   font-family: "Krub", sans-serif;
+  background-image: linear-gradient(
+    to top,
+    var(--grisClaro) 0%,
+    var(--blanco) 100%
+  );
 }
 
 .boton {
@@ -46,15 +52,24 @@ body {
   background-color: #03b4c4;
 }
 
+.sombra {
+  -webkit-box-shadow: 0px 5px 15px 0px rgba(112, 112, 112, 0.48);
+  -moz-box-shadow: 0px 5px 15px 0px rgba(112, 112, 112, 0.48);
+  box-shadow: 0px 5px 15px 0px rgba(112, 112, 112, 0.48);
+  background-color: var(--blanco);
+  padding: 2rem;
+  border-radius: 1rem;
+}
+
 /* Tipografía */
 h1 {
   font-size: 3rem;
 }
 h2 {
-  font-size: 2.5rem;
+  font-size: 2.8rem;
 }
 h3 {
-  font-size: 1.5rem;
+  font-size: 2.3rem;
 }
 h1,
 h2,
@@ -106,6 +121,7 @@ h3 {
   background-size: cover;
   height: 45rem;
   position: relative;
+  margin-bottom: 2rem;
 }
 .contenido-seccion {
   position: absolute;
@@ -127,4 +143,75 @@ h3 {
 .ubicacion {
   display: flex;
   align-items: flex-end;
+}
+
+/* Servicios */
+.servicios {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+@media (min-width: 480px) {
+  .servicios {
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    column-gap: 1rem; 
+  }
+}
+
+.servicio h3 {
+  color: var(--secundario);
+  font-weight: 400;
+  font-size: 2.5rem;
+}
+
+.servicio {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+
+.iconos {
+  background-color: var(--primario);
+  border-radius: 100px;
+  width: 150px;
+  height: 150px;
+  display: flex;
+  justify-content: space-evenly;
+  align-items: center;
+}
+
+.servicio p {
+  text-align: center;
+  line-height: 2;
+}
+
+/*Formulario */
+.formulario fieldset{
+  border: none;
+}
+.contacto {
+  margin: 3rem auto;
+}
+
+.formulario {
+  background-color: var(--gris);
+  width: min(60rem, 100%); /*Utilizar el valor más pequeño*/
+  margin: 0 auto;
+  padding: 3rem;
+  border-radius: 1rem;
+}
+
+legend {
+  color: var(--primario);
+  font-weight: bold;
+  font-size: 1.8rem;
+  text-transform: uppercase;
+  margin-bottom: 2rem;
+  display: block;
+  text-align: center;
+}
+
+.formulario .boton{
+  
 }
