--- a/src/style.css
+++ b/src/style.css
@@ -10,12 +10,20 @@
 html {
   font-size: 62.5%;
   box-sizing: border-box; /*Hack para Box Model */
+  scroll-snap-type: y mandatory;
 }
 *,
 *:before,
 *:after {
   box-sizing: inherit;
 }
+
+/* Scroll Snap */
+.servicios, .navegador-principal, .contact{
+  scroll-snap-align: center ;
+  scroll-snap-stop: always;
+}
+
 body {
   font-size: 2rem; /* 1rem = 10px*/
   font-family: "Krub", sans-serif;
@@ -40,6 +48,7 @@ body {
   text-align: center;
   cursor: pointer;
   transition: 200ms all ease-in-out;
+  border: none;
 }
 
 @media (min-width: 480px) {
@@ -75,6 +84,23 @@ h1,
 h2,
 h3 {
   text-align: center;
+}
+/* Utilidades */
+
+.w-100{
+width: 100%;
+}
+@media (min-width: 768px){ 
+  .w-100{
+    width: auto;
+  }
+}
+.flex{
+  display: flex;
+}
+
+.alinear-derecha{
+justify-content: flex-end;
 }
 
 /* Navegador */
@@ -155,7 +181,7 @@ h3 {
   .servicios {
     display: grid;
     grid-template-columns: repeat(3, 1fr);
-    column-gap: 1rem; 
+    column-gap: 1rem;
   }
 }
 
@@ -187,7 +213,7 @@ h3 {
 }
 
 /*Formulario */
-.formulario fieldset{
+.formulario fieldset {
   border: none;
 }
 .contacto {
@@ -202,7 +228,7 @@ h3 {
   border-radius: 1rem;
 }
 
-legend {
+.formulario legend {
   color: var(--primario);
   font-weight: bold;
   font-size: 1.8rem;
@@ -211,7 +237,40 @@ legend {
   display: block;
   text-align: center;
 }
+@media (min-width: 768px){ 
+  .contenedor-campos {
+  display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    column-gap: 1rem;
+    grid-template-rows: auto, auto, 20rem;
+}
+.campo:nth-child(3), .campo:nth-child(4){
+  grid-column: 1 /3;
+}
+}
 
-.formulario .boton{
-  
+.campo {
+  margin-bottom: 1rem;
+}
+.campo label {
+  color: var(--blanco);
+  font-weight: bold;
+  margin-bottom: 0.5rem;
+  display: block;
+}
+.input-text {
+  width: 100%;
+  border: none;
+  padding: 1.5rem;
+  border-radius: 1.5rem;
+}
+
+.campo textarea{
+  height: 20rem;
+}
+
+/* Footer */
+
+.footer{
+  text-align: center;
 }
