--- a/src/style.css
+++ b/src/style.css
@@ -19,7 +19,7 @@ html {
 }
 
 /* Scroll Snap */
-.servicios, .navegador-principal, .contact{
+.servicios, .navegador-principal, .formulario{
   scroll-snap-align: center ;
   scroll-snap-stop: always;
 }
@@ -222,7 +222,7 @@ justify-content: flex-end;
 
 .formulario {
   background-color: var(--gris);
-  width: min(60rem, 100%); /*Utilizar el valor más pequeño*/
+  width: min(70rem, 100%); /*Utilizar el valor más pequeño*/
   margin: 0 auto;
   padding: 3rem;
   border-radius: 1rem;
@@ -248,9 +248,20 @@ justify-content: flex-end;
   grid-column: 1 /3;
 }
 }
-
 .campo {
   margin-bottom: 1rem;
+}
+@media (min-width: 480px){ 
+  .campo{
+    display: flex;
+    align-items: center;
+  }
+  .campo label {
+    flex: 0 0 90px;
+    flex-grow: 0;
+    flex-shrink: 0;
+    flex-basis: 90px;
+}
 }
 .campo label {
   color: var(--blanco);
