--- a/src/style.css
+++ b/src/style.css
@@ -19,8 +19,10 @@ html {
 }
 
 /* Scroll Snap */
-.servicios, .navegador-principal, .formulario{
-  scroll-snap-align: center ;
+.servicios,
+.navegador-principal,
+.formulario {
+  scroll-snap-align: center;
   scroll-snap-stop: always;
 }
 
@@ -87,20 +89,20 @@ h3 {
 }
 /* Utilidades */
 
-.w-100{
-width: 100%;
+.w-100 {
+  width: 100%;
 }
-@media (min-width: 768px){ 
-  .w-100{
+@media (min-width: 768px) {
+  .w-100 {
     width: auto;
   }
 }
-.flex{
+.flex {
   display: flex;
 }
 
-.alinear-derecha{
-justify-content: flex-end;
+.alinear-derecha {
+  justify-content: flex-end;
 }
 
 /* Navegador */
@@ -237,22 +239,23 @@ justify-content: flex-end;
   display: block;
   text-align: center;
 }
-@media (min-width: 768px){ 
+@media (min-width: 768px) {
   .contenedor-campos {
-  display: grid;
+    display: grid;
     grid-template-columns: repeat(2, 1fr);
     column-gap: 1rem;
     grid-template-rows: auto, auto, 20rem;
-}
-.campo:nth-child(3), .campo:nth-child(4){
-  grid-column: 1 /3;
-}
+  }
+  .campo:nth-child(3),
+  .campo:nth-child(4) {
+    grid-column: 1 /3;
+  }
 }
 .campo {
   margin-bottom: 1rem;
 }
-@media (min-width: 480px){ 
-  .campo{
+@media (min-width: 480px) {
+  .campo {
     display: flex;
     align-items: center;
   }
@@ -261,7 +264,7 @@ justify-content: flex-end;
     flex-grow: 0;
     flex-shrink: 0;
     flex-basis: 90px;
-}
+  }
 }
 .campo label {
   color: var(--blanco);
@@ -276,20 +279,20 @@ justify-content: flex-end;
   border-radius: 1.5rem;
 }
 
-.campo textarea{
+.campo textarea {
   height: 20rem;
 }
 
 /* Footer */
 
-.footer{
+.footer {
   text-align: center;
 }
 
-.footer .gitHub{
+.footer .gitHub {
   color: var(--secundario);
   text-decoration: none;
 }
-.footer .gitHub:hover{
+.footer .gitHub:hover {
   color: var(--primario);
 }
